# FinalProject

./: Dockerfile  abstract.py  info.py  logs.txt
finalproject/: pyproject.toml
