[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["Volodymyr Shapovalov <vovanshap71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
addressbook = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
